<resources>
    <string name="app_name">Hexa - Tec</string>
    <string name="configuración">Configuración</string>
    <string name="wifi">Wi-Fi</string>
    <string name="conectado">Conectado</string>
    <string name="conexion">Conexión</string>
    <string name="conectar">Conectar</string>
    <string name="ip">IP</string>
    <string name="puerto">Puerto</string>
    <string name="sensibilidad">Sensibilidad</string>
    <string name="palanca">Palanca</string>
    <string name="giro">Giro</string>
    <string name="controles">Controles</string>
    <string name="normal">Normal</string>
    <string name="especial">Especial</string>
    <string name="conectadoa">Conectado a:</string>
    <string name="replicar1">Replicar 1</string>
    <string name="replicar2">Replicar 2</string>
    <string name="replicar3">Replicar 3</string>
    <string name="c1">1</string>
    <string name="c2">2</string>
    <string name="c3">3</string>
    <string name="c4">4</string>
    <string name="c5">5</string>
    <string name="c6">6</string>
    <string name="grabaciones">Lista de grabaciones</string>
    <string name="adelante">Adelante:</string>
    <string name="disenio1">Diseño 1</string>
    <string name="disenio2">Diseño 2</string>
    <string name="disenio3">Diseño 3</string>
    <string name="ejemplo_ip">Ej. 192.168.0.1</string>
    <string name="ejemplo_puerto">Ej. 1234</string>
    <string name="atras">Flecha de regreso</string>
    <string name="desc_btn_ajustes">Boton para ingresar a los ajustes</string>
    <string name="desc_logo">Logo de la pantalla de inicio de la aplicación</string>
    <string name="desc_recargar">Boton para recargar la lista de dispositivos y redes</string>
    <string name="estado_wifi">Estado :</string>
    <string name="nombre_wifi">Nombre :</string>
    <string name="velocidad_wifi">Velocidad :</string>
    <string name="intensidad_wifi">Intensidad :</string>
    <string name="bateria">Nivel de carga de la bateria</string>
    <string name="guardados">Movimientos grabados almacenados.</string>
    <string name="grabar">Boton para grabar movimientos.</string>
    <string name="camara">Activar / desactivar camara.</string>
    <string name="salir">Regresar a menu principal.</string>
    <string name="nivel_bateria">0%</string>
    <string name="spider">Araña</string>
    <string name="scorpion">Escorpión</string>
    <string name="auto">Auto</string>
    <string name="radar">Logo de boton para activar el modo radar del robot.</string>
    <string name="escudo">Logo para activar el modo defensa del robot.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>