<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/scorpion_fondo"
    tools:context=".control_scopion">

    <LinearLayout
        android:id="@+id/pantalla_scorpion"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="top"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/control_superior_scorpion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            android:gravity="top|center"
            tools:ignore="MissingConstraints,UselessParent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/black"
                    android:textSize="20sp"
                    android:hint="@string/conectado"/>

            </LinearLayout>

            <ImageView
                android:id="@+id/salir_control_scorpion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_exit_to_app_24"
                android:contentDescription="@string/salir" />

            <Switch
                style="@style/ThemeOverlay.App.widget.switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:hint="@string/auto"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <ImageView
                android:id="@+id/lista_grabaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_folder_24"
                android:contentDescription="@string/guardados" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/baseline_circle_24"
                android:contentDescription="@string/grabar" />

            <Switch
                style="@style/ThemeOverlay.App.widget.switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColorHint="@color/black"
                android:textSize="20sp"
                android:hint="@string/especial"
                tools:ignore="UseSwitchCompatOrMaterialXml" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColorHint="@color/black"
                        android:textSize="20sp"
                        android:text="@string/nivel_bateria"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/baseline_battery_0_bar_24"
                        android:contentDescription="@string/bateria" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:src="@drawable/baseline_video_camera_back_24"
                        android:contentDescription="@string/camara"
                        tools:ignore="NestedWeights" />

                    <ImageView
                        android:id="@+id/btn_radar"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginBottom="5dp"
                        android:src="@drawable/baseline_radar_24"
                        android:contentDescription="@string/radar"
                        tools:ignore="NestedWeights" />

                    <ImageView
                        android:id="@+id/btn_defensa"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:layout_weight="1"
                        android:layout_marginTop="5dp"
                        android:src="@drawable/baseline_shield_24"
                        android:contentDescription="@string/escudo"
                        tools:ignore="NestedWeights" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <FrameLayout
            android:id="@+id/rad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <FrameLayout
            android:id="@+id/cont_normal_scorpion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>