<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/Azul"
        android:gravity="top|center">

        <ImageView
            android:id="@+id/btn_ajustes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_settings_24"
            android:layout_gravity="right"
            android:layout_margin="20dp"
            android:contentDescription="@string/desc_btn_ajustes"
            tools:ignore="RtlHardcoded" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/app_name"
            android:textColorHint="@color/black"
            android:textSize="50sp"/>

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:src="@drawable/robot"
            android:layout_marginTop="60dp"
            android:layout_marginBottom="60dp"
            android:contentDescription="@string/desc_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/conexion"
            android:textColorHint="@color/black"
            android:textSize="30sp"/>

        <Button
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/btn_wifi"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:hint="@string/wifi"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/anaranjado"
            android:textSize="20sp"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

        <Button
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:id="@+id/btn_bluetooth"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/anaranjado"
            android:textSize="20sp"
            android:hint="@string/bluetooth"
            android:textColorHint="@color/white"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>