<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".conexion_wifi">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="top"
        android:background="@color/Azul">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <ImageView
                android:id="@+id/btn_atras_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_navigate_before_24"
                android:contentDescription="@string/atras" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/wifi"
                android:textColorHint="@color/white"
                android:textSize="30sp"
                android:textAlignment="center"
                tools:ignore="InefficientWeight" />

            <ImageView
                android:id="@+id/btn_recargar_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/baseline_replay_24"
                android:contentDescription="@string/desc_recargar"
                android:layout_marginEnd="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="vertical"
            android:background="@color/Azul_claro">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_gravity="center"
                    android:textColorHint="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:hint="@string/estado_wifi"/>

                <TextView
                    android:id="@+id/estado_red"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:layout_marginStart="10dp"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_gravity="center"
                    android:textColorHint="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:hint="@string/nombre_wifi"/>

                <TextView
                    android:id="@+id/nombre_red"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:layout_marginStart="10dp"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_gravity="center"
                    android:textColorHint="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:hint="@string/velocidad_wifi"/>

                <TextView
                    android:id="@+id/velocidad_red"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:layout_marginStart="10dp"
                    android:textSize="25sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:orientation="horizontal"
                tools:ignore="NestedWeights">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.2"
                    android:layout_gravity="center"
                    android:textColorHint="@color/white"
                    android:textSize="25sp"
                    android:textAlignment="center"
                    android:hint="@string/intensidad_wifi"/>

                <TextView
                    android:id="@+id/intensidad_red"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:textColorHint="@color/white"
                    android:layout_marginStart="10dp"
                    android:textSize="25sp"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="75dp"
            android:layout_marginTop="55dp"
            android:gravity="center">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/ip"
                android:textSize="25sp"
                android:textColorHint="@color/white"
                android:textAlignment="center"/>

            <EditText
                android:id="@+id/ingreso_ip"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:hint="@string/ejemplo_ip"
                android:textAlignment="center"
                android:textColor="@color/black"
                tools:ignore="InefficientWeight" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/puerto"
                android:textSize="25sp"
                android:textColorHint="@color/white"
                android:textAlignment="center"
                android:layout_marginTop="20dp"/>

            <EditText
                android:id="@+id/ingreso_puerto"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20sp"
                android:hint="@string/ejemplo_puerto"
                android:textAlignment="center"
                android:textColor="@color/black"/>

            <Button
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:id="@+id/btn_conectar_wifi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/verde_claro"
                android:hint="@string/conectar"
                android:textColorHint="@color/white"
                android:textSize="20sp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"/>

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>