<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ajustes"
    android:background="@drawable/ajustes_fondo">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="top">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/btn_atras_ajustes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/baseline_navigate_before_24"
                    android:contentDescription="@string/atras" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:textAlignment="center"
                    android:textSize="30sp"
                    android:hint="@string/configuración"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="20dp"
                android:background="@color/white"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/sensibilidad"
                    android:textAlignment="center"
                    android:textSize="25sp"
                    android:textColorHint="@color/white"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/palanca"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/sl_palanca"
                    app:thumbColor="@color/anaranjado"
                    app:haloColor="@color/anaranjado_a70"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"
                    android:layout_marginStart="10dp"
                    android:hint="@string/giro"/>

                <com.google.android.material.slider.Slider
                    android:id="@+id/sl_giro"
                    app:thumbColor="@color/anaranjado"
                    app:haloColor="@color/anaranjado_a70"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/white"
                android:layout_margin="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/controles"
                    android:textColorHint="@color/white"
                    android:textAlignment="center"
                    android:textSize="25sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/normal"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"/>

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:id="@+id/btn_normal_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@color/anaranjado"
                            android:layout_margin="5dp"
                            android:hint="@string/disenio1"/>

                        <Button
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:id="@+id/btn_normal_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@color/anaranjado"
                            android:layout_margin="5dp"
                            android:hint="@string/disenio2"/>

                        <Button
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:id="@+id/btn_normal_3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@color/anaranjado"
                            android:layout_margin="5dp"
                            android:hint="@string/disenio3"/>

                    </LinearLayout>

                </HorizontalScrollView>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="@string/especial"
                    android:textColorHint="@color/white"
                    android:textSize="20sp"/>

                <HorizontalScrollView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <Button
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:id="@+id/btn_especial_1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:hint="@string/disenio1"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@color/anaranjado"
                            android:layout_margin="5dp"
                            android:textSize="20sp"/>

                        <Button
                            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                            android:id="@+id/btn_especial_2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textSize="20sp"
                            android:textColorHint="@color/white"
                            android:backgroundTint="@color/anaranjado"
                            android:layout_margin="5dp"
                            android:hint="@string/disenio2"/>

                    </LinearLayout>

                </HorizontalScrollView>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>